--- a/src/css/inc/card-toolbar.css
+++ b/src/css/inc/card-toolbar.css
@@ -6,7 +6,7 @@ card-toolbar {
   width: 100%;
   padding: 2rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   gap: 1rem;
   opacity: 0;
   align-items: center;
