--- a/public/css/main.css
+++ b/public/css/main.css
@@ -790,6 +790,7 @@ tab-navi .adder{
     display:flex;
     align-items:center;
     font-size:1.3rem;
+    line-height:2.4;
     padding:0 1rem;
     margin-left:.5rem
   }
@@ -854,7 +855,17 @@ tab-handle .closer{
     border-radius:50%;
     height:1.8rem;
     width:1.8rem;
+    box-shadow:0 0 10px hsl(15, 50%, 28%);
+    box-shadow:0 0 10px var(--bg-4-color)
   }
+
+tab-handle:hover .closer{
+      display:flex
+    }
+
+tab-handle:hover .closer:hover{
+        background:hsla(0, 100%, 100%, 0.15);
+      }
 
 tab-handle.active{
     background:hsl(29, 33%, 34%)
@@ -864,12 +875,8 @@ tab-handle.active{
   }
 
 tab-handle.active .closer{
-      display:flex
+      display:flex;
     }
-
-tab-handle.active .closer:hover{
-        background:hsla(0, 100%, 100%, 0.15);
-      }
 
 tab-navi.overflown tab-handle:not(.active){
         min-width:0;
@@ -1193,7 +1200,7 @@ card-toolbar :focus{
     outline:0.1rem var(--hd-color) solid;
   }
 
-card-toolbar button[name="done"]{
+card-toolbar button[name="done"], card-toolbar .button[name="done"]{
       display:none;
     }
 
@@ -1219,11 +1226,11 @@ card-base:hover card-toolbar, card-base:focus card-toolbar, card-base:focus-with
       bottom:auto
     }
 
-[data-card-state="edit"] .editable card-toolbar button[name="done"]{
+[data-card-state="edit"] .editable card-toolbar button[name="done"], [data-card-state="edit"] .editable card-toolbar .button[name="done"]{
           display:flex;
         }
 
-[data-card-state="edit"] .editable card-toolbar button:not([name="done"]){
+[data-card-state="edit"] .editable card-toolbar button:not([name="done"]), [data-card-state="edit"] .editable card-toolbar .button:not([name="done"]){
           display:none;
         }
 
