--- a/src/css/inc/tab-navi.css
+++ b/src/css/inc/tab-navi.css
@@ -19,6 +19,7 @@ tab-navi {
     display: flex;
     align-items: center;
     font-size: 1.3rem;
+    line-height: 2.4;
     padding: 0 1rem;
     margin-left: .5rem;
     &:hover {
