removed redundant modules, adapted import validation to new card/tab format

--- a/src/css/inc/card-base.css
+++ b/src/css/inc/card-base.css
@@ -33,7 +33,7 @@ card-base {
 
   & article {
     position: relative;
-    font-family: "Della Respira";
+    font-family: var(--c-card-font);
     transform-origin: 50%;
     display: flex;
     align-items: flex-start;
