--- a/src/css/inc/defs.css
+++ b/src/css/inc/defs.css
@@ -18,6 +18,7 @@
 
   --logo-color: hsl(46, 85%, 39%);
   --hd-color: 	hsl(44, 81%, 38%);
+  --hd-action-color: 	hsl(44, 48%, 60%);
 
   --text-shadow-color: hsl(252, 10%, 0%, .5);
   --resizer-color: hsl(204, 100%, 40%);
