--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,4 +30,5 @@
 @import './inc/style-editor.css';
 @import './inc/footer.css';
 @import './inc/fonts.css';
+@import './inc/license.css';
 @import './inc/print.css';
