--- a/src/css/inc/header.css
+++ b/src/css/inc/header.css
@@ -1,11 +1,29 @@
 header {
   display: flex;
-  background: var(--bg-0-color);
   height: var(--header-height);
-  border-bottom: .1rem solid  var(--hd-color);
+  border-bottom: 0.1rem solid var(--hd-color);
+  background-color: var(--bg-0-color);
   background-image: url(../media/patterns/system/light-subtle-rocky-wall.png);
   justify-content: space-between;
   padding-inline: 1rem;
+}
+
+#main-toolbar {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  & li {
+    display:flex;
+    align-items: center;
+    & > * {
+      padding: 1rem 0;
+      margin: 0;
+      color: var(--hd-action-color);
+      box-shadow: none;
+      background: none;
+    }
+  } 
 }
 
 #logo-area {
@@ -19,6 +37,6 @@ header {
   & svg {
     display: block;
     fill: var(--logo-color);
-    filter: drop-shadow(.2rem 0 .2rem var(--text-shadow-color));
+    filter: drop-shadow(0.2rem 0 0.2rem var(--text-shadow-color));
   }
 }
